@@ -1,1 +1,2 @@
+FR0010018333;EASYETF EURO AUTO;SYA;EURONEXT;EUR;PAR;FR
 NL0000400653;GEMALTO;GTO;EURONEXT;EUR;PAR;NL
